Fix input text display style problem on Safari
Set border-radius to 0 to replace the default setting on Safari.

--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@
   font-size: 0.8em;
   color: #48484A;
   border: 1px solid #FFFFFF;
+  border-radius: 0;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
